# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  camera.h  fragShader.fs  glad.c  lightVertShader.vs  light_cube.fs  main.cpp  mesh.h  model.h  shader.h  vertShader.glsl
assets/models/box/: box.blend  box.mtl
assets/models/boxb/: box.mtl
assets/models/pistol/: pistol.mtl
assets/models/sword/: sword.mtl
include/assimp/: revision.h
include/glad/: glad.h
shaders/: advanced.fs  advanced.vs  fragShader.fs  skyboxShader.fs  skyboxShader.vs  vertShader.vs
